test/types/void/void-variable-use-2.good
void-variable-use-2.chpl:2: error: a nothing variable cannot be assigned
